fix: update token values remove commented file and update token version

--- a/packages/sage-assets/lib/stylesheets/components/_dropdown.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_dropdown.scss
@@ -338,7 +338,7 @@ $-dropdown-trigger-dropdown-offset: rem(16px) + sage-spacing(xs);
     border-start-end-radius: 0;
   }
 
-  @media (prefers-color-scheme: dark) {
+  [data-theme="dark"] & {
     background: var(--pine-color-background-container);
     border: var(--pine-border);
   }
