--- a/packages/sage-assets/lib/stylesheets/components/_property.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_property.scss
@@ -12,7 +12,7 @@
   font: var(--pine-typography-body-medium);
 
   .sage-property-group &:not(:last-child) {
-    margin-inline-end: sage-spacing(md);
+    margin-inline-end: var(--pine-dimension-md);
   }
 }
 
