--- a/packages/sage-assets/lib/stylesheets/tokens/_color_palette.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_color_palette.scss
@@ -307,6 +307,7 @@ $sage-color-default-name: "grey 500";
   $value: if($value == null, $default-value, $value);
 
   // Handle aliases (same as sage-color)
+  // stylelint-disable color-named
   @if $base-str == "orange" {
     $base: mercury;
     $base-str: "mercury";
@@ -384,6 +385,7 @@ $sage-color-default-name: "grey 500";
       $value: 950;
     }
   }
+  // stylelint-enable color-named
 
   // Use old Style Dictionary lookup
   // First verify the color exists in the map
