--- a/packages/sage-assets/lib/stylesheets/components/_nav.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_nav.scss
@@ -4,10 +4,10 @@
 /// @group sage
 ////
 
-$-nav-color-text: sage-color(grey, 800);
-$-nav-color-focus: sage-color(grey, 500);
-$-nav-color-background: sage-color(grey, 200);
-$-nav-color-background-hover: sage-color(grey, 200);
+$-nav-color-text: var(--pine-color-text);
+$-nav-color-focus: var(--pine-color-text-disabled);
+$-nav-color-background: var(--pine-color-background-inset);
+$-nav-color-background-hover: var(--pine-color-background-inset);
 $-nav-icon-size: rem(16px);
 $-nav-icon-spacing: rem(8px);
 $-nav-subitem-border-width: rem(2px);
@@ -36,7 +36,7 @@ $-nav-subitem-border-width: rem(2px);
     $outline-offset-block: -1,
     $outline-border-radius: sage-border(radius-medium),
   );
-  @include sage-focus-outline--update-color(sage-color(purple, 300));
+  @include sage-focus-outline--update-color(var(--pine-color-purple-600));
 
   display: flex;
   align-items: center;
@@ -63,7 +63,7 @@ $-nav-subitem-border-width: rem(2px);
   @extend %t-sage-body-small-med;
 
   &.sage-nav__link--active {
-    @include sage-focus-outline--update-color(sage-color(purple, 300));
+    @include sage-focus-outline--update-color(var(--pine-color-purple-600));
 
     background: $-nav-color-background;
   }
@@ -88,7 +88,7 @@ $-nav-subitem-border-width: rem(2px);
 
   &:not(.sage-nav__list--sub) {
     .sage-nav__link--active {
-      @include sage-focus-outline--update-color(sage-color(purple, 300));
+      @include sage-focus-outline--update-color(var(--pine-color-purple-600));
     }
 
     .sage-nav__link--active::after {
@@ -117,5 +117,5 @@ $-nav-subitem-border-width: rem(2px);
 .sage-nav__list--sub-with-icon {
   margin-inline-start: calc((#{sage-spacing(sm)} + (#{$-nav-icon-size} / 2)) - (#{$-nav-subitem-border-width} / 2) - (#{$-nav-icon-spacing} / 2));
   padding-inline-start: sage-spacing(sm);
-  border-inline-start: $-nav-subitem-border-width solid sage-color(grey, 300);
+  border-inline-start: $-nav-subitem-border-width solid var(--pine-color-border);
 }
