fix: remove instance of mercury color

--- a/docs/lib/sage_rails/app/views/sage_components/_sage_avatar.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_avatar.html.erb
@@ -52,7 +52,7 @@ end
   <% end %>
 
   <% if !component.initials && !component.image %>
-    <pds-icon name="user-filled" color="var(--pine-color-mercury-500)" class="sage-avatar__graphic"></pds-icon>
+    <pds-icon name="user-filled" color="var(--pine-color-brand)" class="sage-avatar__graphic"></pds-icon>
   <% end %>
 
   <% if component.image %>
